# djangocon-us-2024

./: .env.temp  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
cms/: apps.py
cms/admin/: __init__.py  gpt.py  musix.py  request.py  song.py
cms/migrations/: 0001_initial.py  0002_TrigramExtension.py
cms/models/: __init__.py  country.py  gpt.py  musix.py  request.py  song.py
cms/serializers/: musix_song.py
cms/signals/: request.py
cms/tasks/: __init__.py  request.py
iam/: admin.py  models.py
iam/migrations/: 0001_initial.py
tutorial/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
